@@ -43,8 +43,12 @@ typedef void CgUpnpMediaServer;
 - (id) initWithCObject:(CgUpnpDevice *)cobj;
 - (void)setUserObject:(id)aUserObj;
 - (id)userObject;
-- (NSArray *)browse:(NSString *)aObjectId;
-- (NSArray *)browse:(NSString *)aObjectId withRequestedCount:(NSUInteger) aRequestedCount;
+- (NSArray *)browse:(NSString *)aObjectId browseFlag:(NSString *)aBrowseFlag;
+- (NSArray *)browse:(NSString *)aObjectId browseFlag:(NSString *)aBrowseFlag withRequestedCount:(NSUInteger) aRequestedCount;
+- (NSArray *)browseMetadata:(NSString *)aObjectId;
+- (NSArray *)browseMetadata:(NSString *)aObjectId withRequestedCount:(NSUInteger) aRequestedCount;
+- (NSArray *)browseDirectChildren:(NSString *)aObjectId;
+- (NSArray *)browseDirectChildren:(NSString *)aObjectId withRequestedCount:(NSUInteger) aRequestedCount;
 - (NSArray *)search:(NSString *)aSearchCriteria;
 - (CGUpnpAvContainer *)rootObject;
 - (CGUpnpAvObject *)objectForId:(NSString *)aObjectId;
